--- a/index.html
+++ b/index.html
@@ -3,97 +3,76 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<<<<<<< HEAD
-    
-=======
 
->>>>>>> 975f0fb (use jinja)
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Description">
-    <meta name="author" content="Author">
+    <meta name="description" content="VillaFleurie location de vacances au Gosier en Guadeloupe">
+    <meta name="author" content="VillaFleurie">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
-	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
+    <meta property="og:site_name" content="VillaFleurie"/> <!-- website name -->
+    <meta property="og:site" content=""/> <!-- website link -->
+    <meta property="og:title" content="VillaFleurie"/> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="VillaFleurie location de vacances au Gosier en Guadeloupe"/>
+    <!-- description shown in the actual shared post -->
+    <meta property="og:image" content=""/> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="/"/> <!-- where do you want your post to link to -->
+    <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Villa</title>
+    <title>VillaFleurie</title>
 
     <!-- Styles -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/fontawesome-all.css" rel="stylesheet">
     <link href="../css/bootstrap-datepicker3.css" rel="stylesheet">
     <link href="../css/swiper.css" rel="stylesheet">
-	<link href="../css/magnific-popup.css" rel="stylesheet">
-	<link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/magnific-popup.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
 
-	<!-- Favicon  -->
+    <!-- Favicon  -->
     <link rel="icon" href="../images/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-        <div class="container">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg fixed-top navbar-light">
+    <div class="container">
 
-            <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Villa</a> -->
+        <!-- Text Logo - Use this if you don't have a graphic logo -->
+        <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Villa</a> -->
 
-            <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="../images/logo.svg" alt="alternative"></a>
+        <!-- Image Logo -->
+        <a class="navbar-brand logo-image" href="index.html"><img src="../images/logo.png" alt="VillaFleurie logo" style="height: 76px"></a>
 
-            <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-                <ul class="navbar-nav ">
-                    <li class="nav-item">
-                        <a class="nav-link" href="article.html">Article <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Rooms</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item page-scroll" href="balcony-room.html">Balcony Room</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="panoramic-room.html">Panoramic Room</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="presidential-room.html">Presidential Room</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-                <span class="nav-item ml-auto">
-                    <a class="btn-outline-sm" href="tel:1-800-324-9832"><i class="fas fa-phone-alt"></i>1-800-324-9832</a>
+        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav ">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">Chambres</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <a class="dropdown-item page-scroll" href="t2-corail.html">T2 Corail</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item page-scroll" href="t3-azur.html">T3 Azur</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+            <span class="nav-item ml-auto">
+                    <a class="btn-outline-sm" href="tel:+590690441530"> <i class="fas fa-phone-alt"></i>+590 690 44 15 30</a>
                 </span>
-                <span class="nav-item lang-switch">
-                    <a class="lang-item no-line active" href="index.html"><img src="../images/language-en.jpg" alt="alternative">EN</a> &nbsp;|&nbsp; <a class="lang-item no-line" href="index.html"><img src="../images/language-it.jpg" alt="alternative">IT</a>
-                </span>
-            </div> <!-- end of navbar-collapse -->
-        </div> <!-- end of container -->
-    </nav> <!-- end of navbar -->
-    <!-- end of navigation -->
-
-
-
-
-
-
-
-
-
-
-
-
+        </div> <!-- end of navbar-collapse -->
+    </div> <!-- end of container -->
+</nav> <!-- end of navbar -->
+<!-- end of navigation -->
 
 
 <!-- Header -->
@@ -719,87 +698,85 @@
 
 
 
-
-
-    <!-- Footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h3>If you are looking too have a comfortable and relaxing time then you should get in touch with us using <a class="green" href="mailto:reception@villa.com">reception@villa.com</a></h3>
-                    <div class="social-container">
+<!-- Footer -->
+<div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Si vous souhaitez passer un moment confortable et relaxant, n'hésitez pas à nous contacter : <a class="green" href="mailto:location.villafleurie@gmail.com">
+                        location.villafleurie@gmail.com
+                    </a></h3>
+                <div class="social-container">
                         <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
                         </span>
-                        <span class="fa-stack">
+                    <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-twitter fa-stack-1x"></i>
                             </a>
                         </span>
-                        <span class="fa-stack">
+                    <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-pinterest-p fa-stack-1x"></i>
                             </a>
                         </span>
-                        <span class="fa-stack">
+                    <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
-                        <span class="fa-stack">
+                    <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-youtube fa-stack-1x"></i>
                             </a>
                         </span>
-                    </div> <!-- end of social-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of footer -->
-    <!-- end of footer -->
+                </div> <!-- end of social-container -->
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
+</div> <!-- end of footer -->
+<!-- end of footer -->
 
 
-    <!-- Copyright -->
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <hr class="divider">
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-6">
-                    <ul class="list-unstyled li-space-lg p-small">
-                        <li><a href="article.html">Article</a></li>
-                        <li><a href="balcony-room.html">Balcony Room</a></li>
-                        <li><a href="panoramic-room.html">Panoramic Room</a></li>
-                        <li><a href="presidential-room.html">Presidential Room</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul> <!-- end of list-unstyled -->
-                </div> <!-- end of col -->
-                <div class="col-lg-6">
-                    <p class="p-small statement">Copyright © <a href="#your-link">Name</a></p>
-                </div> <!-- end of col -->
-            </div> <!-- enf of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of copyright -->
-    <!-- end of copyright -->
+<!-- Copyright -->
+<div class="copyright">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <hr class="divider">
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+        <div class="row">
+            <div class="col-lg-6">
+                <ul class="list-unstyled li-space-lg p-small">
+                    <li><a href="t2-corail.html">T2 Corail</a></li>
+                    <li><a href="t3-azur.html">T3 Azur</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul> <!-- end of list-unstyled -->
+            </div> <!-- end of col -->
+            <div class="col-lg-6">
+                <p class="p-small statement">Copyright © VillaFleurie</p>
+            </div> <!-- end of col -->
+        </div> <!-- enf of row -->
+    </div> <!-- end of container -->
+</div> <!-- end of copyright -->
+<!-- end of copyright -->
 
 
-    <!-- Scripts -->
-    <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-    <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-    <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-    <script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-    <script src="js/bootstrap-datepicker.min.js"></script> <!-- Datepicker for Bootstrap -->
-    <script src="js/scripts.js"></script> <!-- Custom scripts -->
+<!-- Scripts -->
+<script src="../js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+<script src="../js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+<script src="../js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+<script src="../js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+<script src="../js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+<script src="../js/bootstrap-datepicker.min.js"></script> <!-- Datepicker for Bootstrap -->
+<script src="../js/scripts.js"></script> <!-- Custom scripts -->
 </body>
 </html>
