move layouts to own directory

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layouts/layout.html" %}
 {% block  content %}
 <!-- Header -->
 <header id="header" class="header">
@@ -120,8 +120,10 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/villafleurie_t3_chambre.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t3_chambre.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t3_chambre.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t3_chambre.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -129,8 +131,10 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/villafleurie_t2_salon_1_wl81yXI.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t2_salon_1_wl81yXI.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t2_salon_1_wl81yXI.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t2_salon_1_wl81yXI.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -138,8 +142,10 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/villafleurie_t3_salon.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t3_salon.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t3_salon.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t3_salon.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -147,8 +153,10 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/villafleurie_t2_terrasse.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t2_terrasse.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t2_terrasse.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t2_terrasse.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -156,8 +164,10 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/villafleurie_t2_salle_de_bain.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t2_salle_de_bain.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t2_salle_de_bain.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t2_salle_de_bain.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -373,7 +383,8 @@
                 <!-- Card -->
                 <div class="card">
                     <div class="card-image">
-                        <a href="t2-corail.html"><img class="img-fluid" src="../images/villafleurie_t2_salon_1_wl81yXI.jpg"
+                        <a href="t2-corail.html"><img class="img-fluid"
+                                                      src="../images/villafleurie_t2_salon_1_wl81yXI.jpg"
                                                       alt="alternative"></a>
                     </div>
                     <div class="card-body">
