--- a/pages/t2-corail.html
+++ b/pages/t2-corail.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layouts/layout.html" %}
 {% block  content %}
 <!-- Header -->
 <header class="ex-header bg-gray">
@@ -29,7 +29,8 @@
                                 <div class="image-container">
                                     <a class="popup-link" href="../images/villafleurie_t2_chambre.jpg"
                                        data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t2_chambre.jpg" alt="alternative"></a>
+                                            class="img-fluid" src="../images/villafleurie_t2_chambre.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -39,7 +40,8 @@
                                 <div class="image-container">
                                     <a class="popup-link" href="../images/villafleurie_t2_chambre_2.jpg"
                                        data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t2_chambre_2.jpg" alt="alternative"></a>
+                                            class="img-fluid" src="../images/villafleurie_t2_chambre_2.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -49,7 +51,8 @@
                                 <div class="image-container">
                                     <a class="popup-link" href="../images/villafleurie_t2_salon_1_wl81yXI.jpg"
                                        data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t2_salon_1_wl81yXI.jpg" alt="alternative"></a>
+                                            class="img-fluid" src="../images/villafleurie_t2_salon_1_wl81yXI.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -57,7 +60,8 @@
                                 <div class="image-container">
                                     <a class="popup-link" href="../images/villafleurie_t2_salon_2.jpg"
                                        data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/villafleurie_t2_salon_2.jpg" alt="alternative"></a>
+                                            class="img-fluid" src="../images/villafleurie_t2_salon_2.jpg"
+                                            alt="alternative"></a>
                                 </div>
                             </div>
                         </div> <!-- end of swiper-wrapper -->
