--- a/pages/t3-azur.html
+++ b/pages/t3-azur.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layouts/layout.html" %}
 {% block  content %}
 <!-- Header -->
 <header class="ex-header bg-gray">
@@ -28,7 +28,8 @@
                             <div class="swiper-slide">
                                 <div class="image-container">
                                     <a class="popup-link" href="../images/villafleurie_t3_chambre.jpg"
-                                       data-effect="fadeIn"><img class="img-fluid" src="../images/villafleurie_t3_chambre.jpg"
+                                       data-effect="fadeIn"><img class="img-fluid"
+                                                                 src="../images/villafleurie_t3_chambre.jpg"
                                                                  alt="alternative"></a>
                                 </div>
                             </div>
@@ -38,7 +39,8 @@
                             <div class="swiper-slide">
                                 <div class="image-container">
                                     <a class="popup-link" href="../images/villafleurie_t3_salon.jpg"
-                                       data-effect="fadeIn"><img class="img-fluid" src="../images/villafleurie_t3_salon.jpg"
+                                       data-effect="fadeIn"><img class="img-fluid"
+                                                                 src="../images/villafleurie_t3_salon.jpg"
                                                                  alt="alternative"></a>
                                 </div>
                             </div>
@@ -48,7 +50,8 @@
                             <div class="swiper-slide">
                                 <div class="image-container">
                                     <a class="popup-link" href="../images/villafleurie_t3_cuisine.jpg"
-                                       data-effect="fadeIn"><img class="img-fluid" src="../images/villafleurie_t3_cuisine.jpg"
+                                       data-effect="fadeIn"><img class="img-fluid"
+                                                                 src="../images/villafleurie_t3_cuisine.jpg"
                                                                  alt="alternative"></a>
                                 </div>
                             </div>
