return exit code 1 if config file is missing

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,9 +67,8 @@
                 <p class="mb-5">Notre mission à VillaFleurie est de nous concentrer sur tous les détails pour faire de
                     votre séjour une expérience extraordinaire. une expérience inoubliable. Nous avons formé notre
                     personnel pour qu'il réponde à vos attentes et les dépasse, afin que votre expérience à la
-                    VillaFleurie ne soit pas un simple souvenir, mais l'un de vos meilleurs souvenirs. ne soit pas qu'un
-                    simple souvenir, mais l'un des meilleurs souvenirs que vous ayez. Nous sommes passionnés passionnés
-                    et nous ne vous décevrons pas.</p>
+                    VillaFleurie ne soit pas un simple souvenir, mais l'un de vos meilleurs souvenirs.
+                    Nous sommes passionnés et nous ne vous décevrons pas.</p>
 
                 <div class="map-responsive mb-5">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3831.2598078323063!2d-61.48991482394046!3d16.20707768449259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c134f148764f5d5%3A0x981bb218cee8b16c!2sVillaFleurie!5e0!3m2!1sfr!2sde!4v1685258248016!5m2!1sfr!2sde"
